--- a/handleData/config.json
+++ b/handleData/config.json
@@ -1,21 +1,21 @@
 {
     "path":{
-        "data_root": "./data",
-        "excel": "./data/全球及重点国家疫情主要指数数据-2020-5-3-9H00.xlsx",
-        "conrties_info": "./data/countries.info.json",
-        "population": "./data/Data_Extract_From_World_Development_Indicators.csv",
+        "data_root": "./handleData/data",
+        "excel": "./handleData/data/wang.xlsx",
+        "conrties_info": "./handleData/data/countries.info.json",
+        "population": "./handleData/data/population.csv",
         "owd_cases": "./data/total-cases-covid-19.csv",
         "owd_death": "./data/total-deaths-covid-19.csv",
-        "owd_all": "./data/owd_all.csv", 
-        "world_map_sample": "./data/worldMap.csv",
-        "dxy_data": "./data/dxy.json"
+        "owd_all": "./handleData/data/owd.csv", 
+        "world_map_sample": "./handleData/data/worldMap.csv",
+        "dxy_data": "./handleData/data/dxy.json"
     },
     "resource":{
         "owd_death": "blob:https://ourworldindata.org/aa41ec43-b6c0-4b69-9373-128fd16e78c8",
         "owd_cases": "blob:https://ourworldindata.org/f718ebe3-69fb-4e7b-b54b-0a96c7cb7f73"
     },
     "export":{
-        "root": "./export/",
+        "root": "./main/static/export/",
         "archived": "./export_archived/"
     },
     "time":{
