--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: $CI_PROJECT_NAME
+  name: ${CI_PROJECT_NAME}-dev
   namespace: $KUBE_NAMESPACE
   labels:
-    app: $CI_PROJECT_NAME
+    app: ${CI_PROJECT_NAME}-dev
 spec:
   replicas: 1
   strategy:
@@ -12,14 +12,14 @@ spec:
   revisionHistoryLimit: 0
   selector:
     matchLabels:
-      app: $CI_PROJECT_NAME
+      app: ${CI_PROJECT_NAME}-dev
   template:
     metadata:
       labels:
-        app: $CI_PROJECT_NAME
+        app: ${CI_PROJECT_NAME}-dev
     spec:
       containers:
-      - name: $CI_PROJECT_NAME
+      - name: ${CI_PROJECT_NAME}-dev
         image: $CI_REGISTRY_IMAGE
         imagePullPolicy: Always
         env:
@@ -31,11 +31,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: $CI_PROJECT_NAME
+  name: ${CI_PROJECT_NAME}-dev
   namespace: $KUBE_NAMESPACE
 spec:
   selector:
-    app: $CI_PROJECT_NAME
+    app: ${CI_PROJECT_NAME}-dev
   ports:
   - name: web
     port: 80
@@ -44,7 +44,7 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: $CI_PROJECT_NAME
+  name: ${CI_PROJECT_NAME}-dev
   namespace: $KUBE_NAMESPACE
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -52,13 +52,13 @@ metadata:
     certmanager.k8s.io/acme-challenge-type: http01
 spec:
   rules:
-  - host: $HOST
+  - host: $HOST_DEV
     http:
       paths:
       - backend:
-          serviceName: $CI_PROJECT_NAME
+          serviceName: ${CI_PROJECT_NAME}-dev
           servicePort: 80
   tls:
   - hosts:
-    - $HOST
-    secretName: ${CI_PROJECT_NAME}-tls-secret
+    - $HOST_DEV
+    secretName: ${CI_PROJECT_NAME}-dev-tls-secret
