--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -47,6 +47,7 @@ metadata:
   name: ${CI_PROJECT_NAME}-dev
   namespace: $KUBE_NAMESPACE
   annotations:
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt
