--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ main/static/report/*.png
 main/static/report/*.txt
 __py
 __pycache__/
+tmp/
+handleData/data/owd.csv
+handleData/data/wang.xlsx
+handleData/data/regions.xlsx
